hphp/test/zend/good/Zend/tests/exception_006.php.expectf

Fatal error: Exceptions must implement the Throwable interface, got int. in %s/exception_006.php on line 3
